<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/solarized_base3">

    <TextView
        android:id="@+id/control_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/control_device"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/device_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/control_device"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/device_address"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/control_device" />

    <TextView
        android:id="@+id/output_pane"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/device_address"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/device_disconnected"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_address" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignTop="@+id/output_pane"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_pane"
        app:layout_constraintVertical_bias="0.0">


        <ImageButton
            android:id="@+id/reverse_gear_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/solarized_base3"
            android:contentDescription="@string/reverse_gear"
            android:onClick="reverseGearButtonClicked"
            android:scaleType="centerCrop"
            android:src="@drawable/reverse_gear_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brakes_light_button" />

        <ImageButton
            android:id="@+id/brakes_light_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/solarized_base3"
            android:contentDescription="@string/brakes"
            android:onClick="brakesLightButtonClicked"
            android:scaleType="centerCrop"
            android:src="@drawable/brakes_light_off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_parking_button" />

        <ImageButton
            android:id="@+id/left_parking_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/solarized_base3"
            android:contentDescription="@string/left_parking"
            android:onClick="leftParkingButtonClicked"
            android:scaleType="centerCrop"
            android:src="@drawable/left_parking_off"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_turn_button" />

        <ImageButton
            android:id="@+id/left_turn_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:background="@color/solarized_base3"
            android:contentDescription="@string/left_turn"
            android:onClick="leftTurnButtonClicked"
            android:scaleType="centerCrop"
            android:src="@drawable/left_turn_off"
            app:layout_constraintBottom_toTopOf="@+id/left_parking_button"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/battery_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/solarized_base3"
            android:contentDescription="@string/battery"
            android:scaleType="centerCrop"
            android:src="@drawable/battery_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rear_fog_button" />

        <ImageButton
            android:id="@+id/rear_fog_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/solarized_base3"
            android:contentDescription="@string/rear_fog"
            android:onClick="rearFogButtonClicked"
            android:scaleType="centerCrop"
            android:src="@drawable/rear_fog_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_parking_button" />

        <ImageButton
            android:id="@+id/right_parking_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/solarized_base3"
            android:contentDescription="@string/right_parking"
            android:onClick="rightParkingButtonClicked"
            android:scaleType="centerCrop"
            android:src="@drawable/right_parking_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_turn_button" />

        <ImageButton
            android:id="@+id/right_turn_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/solarized_base3"
            android:contentDescription="@string/right_turn"
            android:onClick="rightTurnButtonClicked"
            android:scaleType="centerCrop"
            android:src="@drawable/right_turn_off"
            app:layout_constraintBottom_toTopOf="@+id/right_parking_button"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="connect"
        android:text="@string/button_connect_connect"
        app:backgroundTint="@color/solarized_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>